force-app/main/default/objects/Apigee_Auth_Provider__mdt/Apigee_Auth_Provider__mdt.object-meta.xml
<CustomObject>
    <label>Apigee Auth Provider</label>
    <pluralLabel>Apigee Auth Providers</pluralLabel>
</CustomObject>