force-app/main/default/objects/Apigee_Auth_Provider__mdt/fields/Access_Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_URL__c</fullName>
    <description>URL to retrieve the access token</description>
    <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
    <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
    <label>Access Token URL</label>
    <type>Url</type>
</CustomField>