force-app/main/default/objects/Apigee_Auth_Provider__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>Oauth client secret, also known as Consumer Secret</description>
    <inlineHelpText>Oauth client secret, also known as Consumer Secret</inlineHelpText>
    <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
    <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>