force-app/main/default/objects/Apigee_Auth_Provider__mdt/fields/Use_JSON_Encoding__c.field-meta.xml
<CustomField>
    <fullName>Use_JSON_Encoding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the OAuth Flow encode the Request Parameters as JSON?</description>
    <label>Use JSON Encoding</label>
    <type>Checkbox</type>
</CustomField>